# qrcodeview

./: .gitmodules  CMakeLists.txt  README.md
qrcodeview/: CMakeLists.txt  qrcodeview.cpp  qrcodeview.h
qrcodeviewplugin/: CMakeLists.txt  qrcodeviewplugin.cpp  qrcodeviewplugin.h
test/: CMakeLists.txt  main.cpp
